--- a/bitacora.html
+++ b/bitacora.html
@@ -21,7 +21,7 @@
     <!-- barra de navegacion entre html´s -->
     <ul class="nav nav-pills nav-fill">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="principal.html">Introducción</a>
+        <a class="nav-link active" aria-current="page" href="introduccion.html">Introducción</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contenidos.html">Contenidos de la materia</a>
